Add aggregate group for MediaWiki skins
Re-add Vector skins to Wikimedia main groups.

Change-Id: I43efa1a0e2db4bd7b7598f9432bbe900048fe1ff

--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -57,3 +57,4 @@ GROUPS:
   - ext-wikimediaevents # 2013-10-07: Renamed from CoreEvents
   - ext-wikimedialicensetexts # commons.wikimedia.org
   - ext-wikimediamessages
+  - mediawiki-skin-vector
