Untested tweak for Chinese variants on Android app
Bug: 69304
Change-Id: I06d4ef059e72d15ed9fd00986ac9d0d9bb7ddd8d

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -8,6 +8,8 @@ TEMPLATE:
   FILES:
     class: AndroidXmlFFS
     codeMap:
+      zh-hans: zh-rCN
+      zh-hant: zh-rTW
       qqq: qq
 
   MANGLER:
@@ -195,7 +197,8 @@ TEMPLATE:
       - yi
       - yo
       - za
-      - zh
+      - zh-hans
+      - zh-hant
       - zu
 ---
 BASIC:
