Add Brazilian Portuguese for Wikipedia Android
While TWN has a variant for Brazilian Portuguese, our Android
app didn't have the Brazilian translations exported
to values-pt_rBR

Change-Id: I6dbfbac2418b8adee15bc80395adb83a9868a829

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -8,6 +8,7 @@ TEMPLATE:
   FILES:
     class: AndroidXmlFFS
     codeMap:
+      pt-br: pt-rBR
       zh-hans: zh-rCN
       zh-hant: zh-rTW
       qqq: qq
@@ -144,6 +145,7 @@ TEMPLATE:
       - pl
       - ps
       - pt
+      - pt-br
       - qqq
       - qu
       - rm
