Doxygen: make TAGFILES an actual path
The line with =URL doesn't look valid configuration.

Change-Id: I6f05782641aa09e2cb8d7049dc8bb213ef102fb7

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1294,7 +1294,7 @@ SKIP_FUNCTION_MACROS   = YES
 # (where the name does NOT include the path) 
 # If a tag file is not located in the directory in which doxygen 
 # is run, you must also specify the path to the tagfile here.
-TAGFILES               = /home/betawiki/doxygen-tagfile.xml=http://svn.wikimedia.org/doc 
+TAGFILES               = /home/betawiki/doxygen-tagfile.xml
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create 
 # a tag file that is based on the input files it reads.
