Map Simplified Chinese (zh-hans) to zh default
In the Android app we have sym links for the two most
common Traditional Chinese variants (zh-rHK to zh-rTW)
but Simplified Chinese is simpler to solve by making it
the default for zh. It's the lesser evil than falling back
to English.

Bug: 69304
Change-Id: I929072a69d39145cb9303e8d12ae6e927c7c2906

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -9,7 +9,7 @@ TEMPLATE:
     class: AndroidXmlFFS
     codeMap:
       pt-br: pt-rBR
-      zh-hans: zh-rCN
+      zh-hans: zh
       zh-hant: zh-rTW
       qqq: qq
 
