SF back to regular extension
The version in packagist hasn't been updated since April

Change-Id: Ib02cd677a9855a188a1f9af4b06dc7d323bfa35d

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
 		"php": ">=5.3.2",
 		"psr/log": "1.0.0",
 		"mediawiki/semantic-media-wiki": "@dev",
-		"mediawiki/semantic-maps": "@dev",
-		"mediawiki/semantic-forms": "@dev"
+		"mediawiki/semantic-maps": "@dev"
 	},
 	"minimum-stability": "dev"
 }
