Ignore mostgloballylinkedfiles-summary and globallywantedfiles-summary
According to their qqq, they are not exported.

Change-Id: I4c07e103c9a6791857ab33469f1eec9fe7f155cb

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -366,6 +366,7 @@ TAGS:
     - exif-software-version-value
     - export-summary
     - fewestrevisions-summary
+    - globallywantedfiles-summary
     - googlesearch
     - helplogin-url
     - helppage
@@ -394,6 +395,7 @@ TAGS:
     - mainpage-nstab
     - markaspatrolledlink
     - mostcategories-summary
+    - mostgloballylinkedfiles-summary
     - mostimages-summary
     - mostinterwikis-summary
     - mostlinked-summary
