[Core] Add new optional message key
https://gerrit.wikimedia.org/r/#/c/150131/6/languages/i18n/en.json,unified

Change-Id: I7e62d4830840aa910d3014f00a20ad13c2b44153

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -161,6 +161,7 @@ TAGS:
     - listgrouprights-right-display
     - listgrouprights-right-revoked
     - media_sample
+    - mediastatistics-nfiles
     - mergehistory-revisionrow
     - metadata-langitem
     - metadata-langitem-default
