--- a/puppet/modules/nginx/files/nginx.conf
+++ b/puppet/modules/nginx/files/nginx.conf
@@ -1,35 +1,54 @@
 # file managed by puppet
 
 user www-data;
-worker_processes 1;
-pid /var/run/nginx.pid;
+worker_processes 4;
+pid /run/nginx.pid;
 
 events {
-  worker_connections 2048;
+	worker_connections 2048;
 }
 
 http {
-  sendfile on;
-  tcp_nopush on;
-  tcp_nodelay on;
-  keepalive_timeout 300 300;
-  types_hash_max_size 2048;
-  server_tokens off;
 
-  client_max_body_size 5M;
-  log_format main '$remote_addr $host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $ssl_cipher $request_time';
+	##
+	# Basic Settings
+	##
 
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 300 300;
+	types_hash_max_size 2048;
+	server_tokens off;
 
-  access_log /var/log/nginx/access.log main;
-  error_log /var/log/nginx/error.log;
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
 
-  gzip on;
-  gzip_comp_level 8;
-  gzip_disable "msie6";
-  gzip_types text/plain text/css application/json application/javascript text/javascript text/xml application/atom+xml image/svg+xml;
-  gzip_buffers 16 8k;
+	client_max_body_size 5M;
 
-  include /etc/nginx/sites-enabled/*;
+	##
+	# Logging Settings
+	##
+
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
+
+	log_format main '$remote_addr $host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $ssl_cipher $request_time';
+
+	##
+	# Gzip Settings
+	##
+
+	gzip on;
+	gzip_disable "msie6";
+
+	gzip_comp_level 8;
+	gzip_buffers 16 8k;
+	gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+	##
+	# Virtual Host Configs
+	##
+
+	include /etc/nginx/sites-enabled/*;
 }
