Update HHVM settings
Somewhat mirroring what WMF is doing

Change-Id: Iad9894f261fa0edd3a73edad0177d077d8b25dd4

--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -10,11 +10,14 @@ hhvm.server.ip = 127.0.0.1
 hhvm.server.file_socket = /run/hhvm/hhvm.sock
 hhvm.server.type = fastcgi
 hhvm.server.gzip_compression_level = 0
+hhvm.server.graceful_shutdown_wait = 5
 
-hhvm.dynamic_extension_path = /usr/lib/hphp/extensions/20140727
+hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20140829
 
 hhvm.jit = true
-hhvm.jit_afrozen_size = 100000000
+hhvm.jit_a_size = 100000000
+hhvm.jit_a_frozen_size = 100000000
+hhvm.jit_a_cold_size = 33000000
 
 hhvm.log.level = Notice
 hhvm.log.always_log_unhandled_exceptions = true
@@ -25,10 +28,12 @@ hhvm.log.file = /var/log/hhvm/error.log
 hhvm.log.access.file = /var/log/hhvm/access.log
 hhvm.log.access.format = %h %l %u % t \”%r\” %>s %b
 hhvm.log.header = true
+hhvm.log.native_stack_trace = true
 
 hhvm.repo.central.path = /run/hhvm/hhvm.hhbc
 
 hhvm.enable_zend_compat = true
+hhvm.enable_obj_destruct_call = true
 
 hhvm.mysql.typed_results = false
 hhvm.mysql.slow_query_threshold = 5000
