--- a/puppet/modules/nginx/files/nginx.conf
+++ b/puppet/modules/nginx/files/nginx.conf
@@ -30,10 +30,9 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
 	log_format main '$remote_addr $host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $ssl_cipher $request_time';
+	access_log /var/log/nginx/access.log main;
+	error_log /var/log/nginx/error.log;
 
 	##
 	# Gzip Settings
