--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -13,6 +13,11 @@ hhvm.server.gzip_compression_level = 0
 hhvm.server.graceful_shutdown_wait = 5
 
 hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20140829
+hhvm.dynamic_extensions[*] = ffs.so
+hhvm.dynamic_extensions[*] = luasandbox.so
+hhvm.dynamic_extensions[*] = wikidiff2.so
+
+hhvm.perf_pid_map = false
 
 hhvm.jit = true
 hhvm.jit_a_size = 100000000
@@ -25,8 +30,6 @@ hhvm.log.runtime_error_reporting_level = 8191
 hhvm.log.use_log_file = true
 hhvm.log.use_syslog = false
 hhvm.log.file = /var/log/hhvm/error.log
-hhvm.log.access.file = /var/log/hhvm/access.log
-hhvm.log.access.format = %h %l %u % t \”%r\” %>s %b
 hhvm.log.header = true
 hhvm.log.native_stack_trace = true
 
