Add autoload and scripts to composer.json
Change-Id: I94060571c140d7cfe5b52d40839780d4e5c7fe1d

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,14 @@
 		"mediawiki/semantic-media-wiki": "@dev",
 		"mediawiki/semantic-maps": "@dev"
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
+	"autoload": {
+		"psr-0": {
+			"ComposerHookHandler": "includes/composer"
+		}
+	},
+	"scripts": {
+		"pre-update-cmd": "ComposerHookHandler::onPreUpdate",
+		"pre-install-cmd": "ComposerHookHandler::onPreInstall"
+	}
 }
