--- a/groups/MediaWiki/WikimediaAgg.yaml
+++ b/groups/MediaWiki/WikimediaAgg.yaml
@@ -61,6 +61,7 @@ GROUPS:
   - ext-ldapauthentication # 2011-12-28: labsconsole.wikimedia.org
   - ext-liquidthreads # 2009-11-11: MediaWiki.org and some other projects
   - ext-listings # Change id bc3616c74aab74b74f78bbb2ce3241e5a564b4f9 for Wikivoyage
+  - ext-mantle
   - ext-mapsources # wikivoyage
   - ext-markashelpful # 2011-12-28: r107514 for enwiki
   - ext-massmessage
