[Core] Add new message key to ignore
https://gerrit.wikimedia.org/r/#/c/166203/1/languages/i18n/en.json,unified

Change-Id: I3091b86400b65681d4d98a5de38c6887d6ad593a

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -297,6 +297,7 @@ TAGS:
     - accesskey-preview
     - accesskey-pt-anontalk
     - accesskey-pt-anonuserpage
+    - accesskey-pt-createaccount
     - accesskey-pt-login
     - accesskey-pt-logout
     - accesskey-pt-mycontris
