[Core] Add message key to ignore
https://gerrit.wikimedia.org/r/#/c/166206/2/languages/i18n/en.json,unified

Change-Id: Idb394f05d3e13d3e64346d056d0b27c72c073537

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -312,6 +312,7 @@ TAGS:
     - accesskey-summary
     - accesskey-t-contributions
     - accesskey-t-emailuser
+    - accesskey-t-info
     - accesskey-t-permalink
     - accesskey-t-print
     - accesskey-t-recentchangeslinked
