[Core] Message is not to be ignores
https://gerrit.wikimedia.org/r/#/c/151683/7/languages/i18n/qqq.json,unified

Change-Id: I68feb5bd677ea8b15d6e11834c2cbdb087b28d95

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -421,6 +421,7 @@ TAGS:
     - pagecategorieslink
     - pageinfo-footer
     - pageinfo-header
+    - pagemerge-logentry
     - pageswithprop-summary
     - patrol-log-auto
     - patrol-log-diff
