--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-		"php": ">=5.3.2",
+		"cssjanus/cssjanus": "1.1.0",
 		"psr/log": "1.0.0",
 		"mediawiki/semantic-media-wiki": "@dev",
 		"mediawiki/semantic-maps": "@dev"
