Updates for Blockly repo changes
Per Niel Fraser: We underwent an unplanned code repo migration for
engineering reasons that broke lots of stuff. But we are back, and the move
gave us the opportunity to make a bunch of improvements. As part of
maturing, Blockly has split into two projects:

* https://github.com/google/blockly This is the core library that is being
  used by hundreds of organizations to build Blockly-based applications.
* https://github.com/google/blockly-games This is the suite of educational
  applications for teaching programming to children.

Change-Id: Ice33c6041042b0b32f6c4668f57f9e386e5dd2e2

--- a/groups/Blockly/Blockly.yaml
+++ b/groups/Blockly/Blockly.yaml
@@ -23,14 +23,6 @@ GROUPS:
 
 ---
 BASIC:
-  id: out-blockly-apps
-  label: Blockly Apps
-
-FILES:
-  sourcePattern: "%GROUPROOT%/blockly/apps/json/%CODE%.json"
-
----
-BASIC:
   id: out-blockly-core
   label: Blockly Core
 
@@ -102,3 +94,11 @@ TAGS:
     - VARIABLES_SET_HELPURL
   ignored:
     - COLOUR_RANDOM_HELPURL
+
+---
+BASIC:
+  id: out-blockly-games
+  label: Blockly Games
+
+FILES:
+  sourcePattern: "%GROUPROOT%/blockly-games/json/%CODE%.json"
