--- a/puppet/modules/nginx/files/nginx.conf
+++ b/puppet/modules/nginx/files/nginx.conf
@@ -49,5 +49,10 @@ http {
 	# Virtual Host Configs
 	##
 
+	upstream php {
+#		server unix:/run/hhvm/hhvm.sock;
+		server unix:/run/php5-fpm.sock;
+	}
+
 	include /etc/nginx/sites-enabled/*;
 }
