Add cdb to composer.json
Change-Id: I96cbb3da4dc5463fb78100b520709f7f5d8fa968

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"require": {
+		"cdb/cdb": "1.0.0",
 		"cssjanus/cssjanus": "1.1.0",
 		"psr/log": "1.0.0",
 		"mediawiki/semantic-media-wiki": "@dev",
