Update component versions in composer.json
Use the Next Significant Release operator so that I do not need
to update this file all the time.

Change-Id: I2291653691f28d4a6b17fd48f7f3badeb7d07c39

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"require": {
-		"cdb/cdb": "1.0.0",
-		"cssjanus/cssjanus": "1.1.0",
+		"cdb/cdb": "~1.0",
+		"cssjanus/cssjanus": "~1.1",
 		"psr/log": "1.0.0",
 		"mediawiki/semantic-media-wiki": "@dev",
 		"mediawiki/semantic-maps": "@dev"
