Add leafo/lessphp to match master
Change-Id: I47c1e0f32f5c647c326138f5653cd5829f430e17

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"require": {
 		"cdb/cdb": "~1.0",
 		"cssjanus/cssjanus": "~1.1",
+		"leafo/lessphp": "~0.5",
 		"psr/log": "1.0.0",
 		"mediawiki/semantic-media-wiki": "@dev",
 		"mediawiki/semantic-maps": "@dev"
