--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 		"cssjanus/cssjanus": "~1.1",
 		"leafo/lessphp": "~0.5",
 		"psr/log": "1.0.0",
+		"ruflin/elastica": "~1.3",
 		"mediawiki/semantic-media-wiki": "@dev",
 		"mediawiki/semantic-maps": "@dev"
 	},
