Add config from upstream
Change-Id: Ifccb466fe80086165c42e067fa55e14e7ae3f316

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,9 @@
 	"scripts": {
 		"pre-update-cmd": "ComposerHookHandler::onPreUpdate",
 		"pre-install-cmd": "ComposerHookHandler::onPreInstall"
+	},
+	"config": {
+		"optimize-autoloader": true,
+		"prepend-autoloader": false
 	}
 }
