Update composer.json per Ia3ef9433b56b8
Change-Id: I884965664036c2e9742fdb21a8d6031858e7b622

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-		"cdb/cdb": "~1.0",
+		"wikimedia/cdb": "~1.0",
 		"cssjanus/cssjanus": "~1.1",
 		"leafo/lessphp": "~0.5",
 		"psr/log": "1.0.0",
