Update hhvm config per wmf
Change-Id: I3f49f0e23ee491776779ef9761bf9bd49c98760b

--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -11,6 +11,7 @@ hhvm.server.file_socket = /run/hhvm/hhvm.sock
 hhvm.server.type = fastcgi
 hhvm.server.gzip_compression_level = 0
 hhvm.server.graceful_shutdown_wait = 5
+hhvm.server.stat_cache = 1
 
 hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20140829
 hhvm.dynamic_extensions[*] = ffs.so
