[Core] Add new optional keys
https://gerrit.wikimedia.org/r/#/c/142046/16/languages/i18n/en.json,unified

Change-Id: Ief16ac3ff4bea0e86969026a00d41f5dba9a56ca

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -189,13 +189,22 @@ TAGS:
     - shared-repo-name-wikimediacommons
     - size-bytes
     - size-exabytes
+    - size-exapixel
     - size-gigabytes
+    - size-gigapixel
     - size-kilobytes
+    - size-kilopixel
     - size-megabytes
+    - size-megapixel
     - size-petabytes
+    - size-petapixel
+    - size-pixel
     - size-terabytes
+    - size-terapixel
     - size-yottabytes
+    - size-yottapixel
     - size-zetabytes
+    - size-zetapixel
     - skinname-cologneblue
     - skinname-modern
     - sorbs
