[Core] Add new optional keys
https://gerrit.wikimedia.org/r/#/c/177171/12/languages/i18n/en.json,unified

Change-Id: I3d0835c39aaf97e76d66e22847a57d7498303e8b

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -50,6 +50,8 @@ TAGS:
     - common.css
     - common.js
     # @deprecated. Remove in MediaWiki 1.23.
+    - content-model-css
+    - content-model-json
     - created
     - days-abbrev
     - diff-with-additional
