Big path update
For new deployment system etc. Removed some unused files.

Change-Id: Ia15fdafb0740f63780c8d3c18f8e05f6761eccb9

--- a/puppet/modules/backup/files/duplicity.conf
+++ b/puppet/modules/backup/files/duplicity.conf
@@ -13,7 +13,7 @@ ENCRKEY=$SIGNKEY
 export PASSPHRASE=$(</root/secrets/backup-passphrase)
 
 # local list of directories to backup
-BACKDIRS='etc var/log var/lib/awstats home www root'
+BACKDIRS='etc var/log var/lib/awstats home www root srv/mediawiki/workdir'
 
 # duplicity options (backup.sh also accepts command line arguments)
 DUPOPTS="$DUPOPTS --full-if-older-than 1M"
