--- a/doxygen.conf
+++ b/doxygen.conf
@@ -38,7 +38,7 @@ PROJECT_NAME           = "MediaWiki Translate Extension"
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = /www/translatewiki.net/docs/Translate
+OUTPUT_DIRECTORY       = /www/translatewiki.net/docroot/docs/Translate
 
 # If the CREATE_SUBDIRS tag is set to YES, then doxygen will create 
 # 4096 sub-directories (in 2 levels) under the output directory of each output 
@@ -114,7 +114,7 @@ FULL_PATH_NAMES        = YES
 # If left blank the directory from which doxygen is run is used as the 
 # path to strip.
 
-STRIP_FROM_PATH        = "/www/translatewiki.net/w/extensions/"
+STRIP_FROM_PATH        = "/srv/mediawiki/targets/production/extensions/"
 
 # The STRIP_FROM_INC_PATH tag can be used to strip a user-defined part of 
 # the path mentioned in the documentation of a class, which tells 
@@ -566,7 +566,7 @@ WARN_FORMAT            = "$file:$line: $text"
 # and error messages should be written. If left blank the output is written 
 # to stderr.
 
-WARN_LOGFILE           = /www/translatewiki.net/w/logs/warn.doxygen
+WARN_LOGFILE           = /www/translatewiki.net/logs/warn.doxygen
 
 #---------------------------------------------------------------------------
 # configuration options related to the input files
@@ -577,7 +577,7 @@ WARN_LOGFILE           = /www/translatewiki.net/w/logs/warn.doxygen
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = /www/translatewiki.net/w/extensions/Translate
+INPUT                  = /srv/mediawiki/targets/production/extensions/Translate
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
@@ -857,7 +857,7 @@ GENERATE_HTMLHELP      = YES
 # can add a path in front of the file if the result should not be 
 # written to the html output directory.
 
-CHM_FILE               = /www/translatewiki.net/docs/Translate/Translate.chm
+CHM_FILE               = /www/translatewiki.net/docroot/docs/Translate/Translate.chm
 
 # If the GENERATE_HTMLHELP tag is set to YES, the HHC_LOCATION tag can 
 # be used to specify the location (absolute path including file name) of 
