Use release version of SMW
Master is again broken... semantic-maps depends on SMW so might
just as well same me trouble of updating version number of SMW.

Change-Id: I540cca122c590aeb5adc7801821911a9f40b3761

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 		"leafo/lessphp": "~0.5",
 		"psr/log": "1.0.0",
 		"ruflin/elastica": "1.3.0.0",
-		"mediawiki/semantic-media-wiki": "@dev",
-		"mediawiki/semantic-maps": "@dev"
+		"mediawiki/semantic-maps": "~3.1"
 	},
 	"minimum-stability": "dev",
 	"autoload": {
