* add support for undelete.py
Change-Id: I3938d1b616b388ba8e1c88be47cd55539e4fc2bf

--- a/groups/Pywikibot/Pywikibot.yaml
+++ b/groups/Pywikibot/Pywikibot.yaml
@@ -357,6 +357,13 @@ FILES:
   sourcePattern: "%GROUPROOT%/pywikibot/thirdparty/%CODE%.json"
 ---
 BASIC:
+  id: out-pywikipedia-undelete
+  label: Pywikibot Undelete
+
+FILES:
+  sourcePattern: "%GROUPROOT%/pywikibot/undelete/%CODE%.json"
+---
+BASIC:
   id: out-pywikipedia-unlink
   label: Pywikibot Unlink
 
